api/swim_form/src/tests/derive/form/unknown_field_attr.stderr
error: Unknown field attribute.
  --> src/tests/derive/form/unknown_field_attr.rs:21:16
   |
21 |         #[form(swim)]
   |                ^^^^
